# QTS3native

./: .gitignore  LICENCE  README.MD  pyproject.toml
src/QTS3native/: __init__.py  keylistener.py  log_gui.py  qtElements.py
src/QTS3native.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
