[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "QTS3native"
version = "0.1.1"
description = "PyQt menu, key listener, and RPCS3 hook helpers for Skate 3 native tooling"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "S4M" }
]
keywords = ["rpcs3", "skate3", "pyqt", "modding", "pymem"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
]

dependencies = [
  "PyQt5",
  "keyboard",
  "pymem",
  "clipboard"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/l-S4M-l/QTS3native"
"Bug Tracker" = "https://github.com/l-S4M-l/QTS3native/issues"
Ko-fi = "https://ko-fi.com/chillsam2"